# fusion-bid

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  start.bat
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260717_0001_initial.py  20260717_0002_dedupe_fields.py  20260717_0003_schedule_fields.py  20260717_0004_execution_trigger.py  20260718_0005_report_quality_analysis.py  20260718_0006_detail_ai_decision.py  20260719_0007_crawl_diagnostics.py  20260719_0008_data_quality_coverage.py
backend/app/: __init__.py  main.py
backend/app/api/: announcements.py  company_profile.py  health.py  llm.py  login.py  parse.py  reports.py  router.py  sources.py  tasks.py
backend/app/browser/: __init__.py  managed_public.py  pdf_detail.py  session.py
backend/app/cleaners/: __init__.py  filters.py  (+1 more)
backend/scripts/: regen_report_from_db.py
backend/tests/: conftest.py  test_announcement_detail_api.py  test_api_models.py  test_ccgp_parser.py  test_cebpub_parser.py  test_crawl_service.py  test_data_quality_v3.py  test_deduplication.py  test_e2e_official_queries.py  test_extraction_v2.py  test_health.py  test_intent_parse.py  test_legacy_migration.py  test_llm_credentials.py  test_llm_profiles.py  test_llm_runtime.py  test_login_launcher.py  test_login_source.py  test_managed_public_browser.py  test_models.py  test_official_document_import.py  test_report_analysis.py  test_reports.py  test_scheduler.py  test_sources_contract.py  test_task_execution_api.py  test_task_update.py
(+116 files in other folders)
