[project]
name = "fusion-bid-backend"
version = "1.0.0"
description = "FusionBid 智标聚合助手 - 后端"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "pypdf>=5.0.0",
    "PyMuPDF>=1.24.0",
    "Pillow>=11.0.0",
    "rapidocr>=3.9.0",
    "onnxruntime>=1.24.0",
    "dateparser>=1.2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "tenacity>=9.0.0",
    "python-docx>=1.1.0",
    "apscheduler>=3.10.0",
    "tzdata>=2024.1; platform_system=='Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "respx>=0.21.0",
]
full = [
    "playwright>=1.61.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
